--- a/Part 2/AVFoundation Quick Start/Source/Main.storyboard
+++ b/Part 2/AVFoundation Quick Start/Source/Main.storyboard
@@ -28,14 +28,37 @@
                                     <action selector="capturePhotoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jja-8p-J6j"/>
                                 </connections>
                             </button>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TFX-Uq-d7h">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6y-2X-yzC" userLabel="Close Preview Button">
+                                <rect key="frame" x="297" y="64" width="97" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Close Preview">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="closePreviewPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qST-tP-fft"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Kds-kJ-CJ6" secondAttribute="bottom" constant="50" id="FRN-ig-l3r"/>
+                            <constraint firstItem="TFX-Uq-d7h" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="GDU-hw-NfX"/>
+                            <constraint firstAttribute="trailing" secondItem="TFX-Uq-d7h" secondAttribute="trailing" id="GJa-NU-QWz"/>
+                            <constraint firstItem="TFX-Uq-d7h" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GwN-HX-Qm7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g6y-2X-yzC" secondAttribute="trailing" constant="20" id="Ww8-5R-1Vh"/>
+                            <constraint firstItem="g6y-2X-yzC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Yzy-lw-g9l"/>
                             <constraint firstItem="Kds-kJ-CJ6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gJe-NT-9UL"/>
+                            <constraint firstAttribute="bottom" secondItem="TFX-Uq-d7h" secondAttribute="bottom" id="ymT-VQ-HA9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="closePreviewButton" destination="g6y-2X-yzC" id="3Km-Tz-75U"/>
+                        <outlet property="previewImageView" destination="TFX-Uq-d7h" id="xyh-6B-Xvw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
