--- a/Part 2/AVFoundation Quick Start Part 2/Source/Main.storyboard
+++ b/Part 2/AVFoundation Quick Start Part 2/Source/Main.storyboard
@@ -12,15 +12,16 @@
         <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CameraViewController" customModule="AVFoundation_Quick_Start" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CameraViewController" customModule="AVFQS_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kds-kJ-CJ6" userLabel="Capture Photo Button">
-                                <rect key="frame" x="144" y="776" width="126" height="36"/>
+                                <rect key="frame" x="134" y="768" width="146" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                 <state key="normal" title="Capture Photo">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -31,10 +32,28 @@
                             <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TFX-Uq-d7h">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6y-2X-yzC" userLabel="Close Preview Button">
-                                <rect key="frame" x="297" y="64" width="97" height="30"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfi-vW-tuR" userLabel="Show Main Image Button">
+                                <rect key="frame" x="119.5" y="768" width="175" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Close Preview">
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" title="Show Main Image">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="capturePhotoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CMo-kF-LTm"/>
+                                    <action selector="showMainImagePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rpK-fu-BCU"/>
+                                </connections>
+                            </button>
+                            <scrollView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="63K-rp-5Rz">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </scrollView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6y-2X-yzC" userLabel="Close Button">
+                                <rect key="frame" x="335" y="64" width="59" height="38"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" title="Close">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -44,10 +63,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="63K-rp-5Rz" secondAttribute="trailing" id="FMB-aQ-Wj1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Kds-kJ-CJ6" secondAttribute="bottom" constant="50" id="FRN-ig-l3r"/>
                             <constraint firstItem="TFX-Uq-d7h" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="GDU-hw-NfX"/>
                             <constraint firstAttribute="trailing" secondItem="TFX-Uq-d7h" secondAttribute="trailing" id="GJa-NU-QWz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Zfi-vW-tuR" secondAttribute="bottom" constant="50" id="GsE-QR-ZTq"/>
                             <constraint firstItem="TFX-Uq-d7h" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GwN-HX-Qm7"/>
+                            <constraint firstItem="63K-rp-5Rz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="J7j-33-7uc"/>
+                            <constraint firstItem="63K-rp-5Rz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="MNc-YW-qTZ"/>
+                            <constraint firstItem="Zfi-vW-tuR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PhL-ZV-wgv"/>
+                            <constraint firstAttribute="bottom" secondItem="63K-rp-5Rz" secondAttribute="bottom" id="W0f-QG-cih"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g6y-2X-yzC" secondAttribute="trailing" constant="20" id="Ww8-5R-1Vh"/>
                             <constraint firstItem="g6y-2X-yzC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Yzy-lw-g9l"/>
                             <constraint firstItem="Kds-kJ-CJ6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gJe-NT-9UL"/>
@@ -56,8 +81,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="closePreviewButton" destination="g6y-2X-yzC" id="3Km-Tz-75U"/>
+                        <outlet property="closeButton" destination="g6y-2X-yzC" id="Bui-Ys-eCn"/>
+                        <outlet property="mainImageScrollView" destination="63K-rp-5Rz" id="dWB-3e-BPA"/>
                         <outlet property="previewImageView" destination="TFX-Uq-d7h" id="xyh-6B-Xvw"/>
+                        <outlet property="showMainImageButton" destination="Zfi-vW-tuR" id="ssq-dt-6SL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
